scrollbar fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,7 +10,6 @@ body {
   display: flex;
   margin: 0 !important;
   -ms-overflow-style: none;  /* Para Internet Explorer y Edge */
-  scrollbar-width: none;  /* Para Firefox */
   overflow-y: scroll; /* Mantiene la funcionalidad de desplazamiento */
 }
 a{
